# chponskiy

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  compose.yml  dev.env  docker-entrypoint.sh  glossary_init.csv  main.py  pyproject.toml
chponskiy/: admin.py  apps.py  models.py  views.py
chponskiy/api/: urls.py
chponskiy/api/v1/: urls.py  views.py
chponskiy/migrations/: 0001_initial.py
chponskiy/static/css/: style.scss
chponskiy/static/glsl/: index.frag
chponskiy/static/js/: main.js
chponskiy/templates/: base.html  base_noform.html  game.html  index.html  leaderboard.html  login.html  profile.html  register.html
django_config/: asgi.py  settings.py  urls.py  wsgi.py
