[project]
name = "chponskiy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-compressor>=4.5.1",
    "django-libsass>=0.9",
    "django-split-settings>=1.3.2",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "django-debug-toolbar>=5.1.0",
    "django-stubs[compatible-mypy]>=5.1.3",
    "flake8>=7.2.0",
    "flake8-pyproject>=1.2.3",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
    "wemake-python-styleguide>=1.1.0",
]
